[package]
name = "beerlover"
description = "Processes Hive Blocks and rewards !BEER commands"
authors = ["wehmoen"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
clap = { version = "3.2.8", features = ["derive", "suggestions", "color"] }
serde_json = {version = "1.0.82"}
serde = {version = "1.0.139", features = ["derive"]}
reqwest = { version = "0.11.11", features = ["json"]}
mongodb = { version = "2.2.2", features = ["tokio-sync"] }
chrono = "0.4.19"
regex = "1.6.0"
